# tallerZ

./: .gitignore  CMakeLists.txt  README.md
Cliente/: CMakeLists.txt  CMakeLists.txt~
Cliente/src/client/: ClientCommandSender.cpp  ClientEventReceiver.cpp
Generador/: CMakeLists.txt  CMakeLists.txt~
Generador/src/: main.cpp
Generador/src/Exceptions/Map_Generator_Exceptions/: Generator_Exception.h
Generador/src/Exceptions/Storage_Exceptions/: Storage_Exception.h
Generador/src/common/Types/: PlayerColor.h  WeaponType.h
Generador/src/map_generation/: Generator.cpp
Mapas/: hellmap_lvl5_4p.json  humidmap_lvl4.json  humidmap_lvl5.json  mapa2.json  mapa3.json  mapa5.json  minimapa.json  springmap_lvl5_2p_small.json  winter_lvl5_2p.json
Servidor/: CMakeLists.txt  CMakeLists.txt~  data.json
Servidor/src/server/: EventSender.h  PlayersManager.h  ServerMain.cpp
Servidor/src/storage/: Game_Loader.h  Json_to_Data.cpp  Json_to_Data.h
src/: SDL_START.cpp  SDL_START.h  Z_RUNNER.cpp  Z_RUNNER.h  header_for_tests.h  main.cpp  tp
src/Exceptions/Front_end_exceptions/: Front_end_exception.cpp  Front_end_exception.h  Generator_Exception.h
src/Exceptions/Map_Generator_Exceptions/: Generator_Exception.cpp
src/Exceptions/Sdl_Exceptions/: Sdl_Exception.cpp  Sdl_Exception.h
src/Exceptions/Storage_Exceptions/: Storage_Exception.cpp
src/Exceptions/lobby_exceptions/: Close_Exception.cpp  Close_Exception.h
src/Exceptions/model_exceptions/: BuildingNotFoundException.cpp  BuildingNotFoundException.h  UnableToBuildThatUnitException.cpp  UnableToBuildThatUnitException.h  UnableToFindAPathException.cpp  UnableToFindAPathException.h  UnitNotFoundException.cpp  UnitNotFoundException.h
src/Utils/: Sdl_Utils.cpp  Sdl_Utils.h
src/client/: ClientCommandSender.cpp  ClientCommandSender.h  ClientEventReceiver.cpp  ClientEventReceiver.h  clientCommandSender.cpp  clientCommandSender.h  clientEventReceiver.cpp  clientEventReceiver.h  clientMain.cpp  clientRunner.h
src/client/controller/: Clickable.h  Controller.cpp  Controller.h  Handler.h  HandlerFactory.cpp  HandlerFactory.h  MouseButtonLeft.cpp  MouseButtonRight.cpp  MouseButtonRight.h  MouseMotion.cpp  MouseState.cpp  MouseState.h  NullHandler.cpp  NullHandler.h  Quit.cpp
src/client/front_end/: Login_Menu2.glade
src/client/lobby/: Login_Menu.glade  clientLobby.cpp  clientLobby.h
src/client/model/: GameControllerProxy.cpp  GameControllerProxy.h  Model.cpp  Model.h  MovementState.h
src/client/view/: BulletView.cpp  BulletView.h  Camera.cpp  Camera.h  EffectType.h  ExplosionView.cpp  ExplosionView.h  FireHitView.cpp  FireHitView.h  HCBulletHitView.cpp  HCBulletHitView.h  Image.cpp  Image.h  LaserHitView.cpp  LaserHitView.h  MainWindow.cpp  MainWindow.h  ObjectMapaVista.cpp  ObjectMapaVista.h  ObjectView.h  ObjectViewMove.cpp  ObjectViewMove.h  Panel.cpp  Panel.h  RobotView.cpp  RobotView.h  RocketHitView.cpp  RocketHitView.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  UnitDeathView.cpp  UnitDeathView.h  UnitView.cpp  UnitView.h  VehicleView.cpp  VehicleView.h  View.cpp  (+9 more)
src/controller/: Clickable.cpp  Clickable.h  Controller.cpp  Controller.h  Handler.cpp  Handler.h  HandlerFactory.cpp  HandlerFactory.h  Mouse.cpp  Mouse.h  MouseButtonLeft.cpp  MouseButtonLeft.h  MouseButtonRight.cpp  MouseMotion.cpp  MouseMotion.h  MouseState.cpp  NullHandler.cpp  NullHandler.h  Quit.cpp  Quit.h  QuitEvent.cpp  QuitEvent.h
src/front_end/: Interface.glade  Main_Window.cpp  Main_Window.h  Timer.cpp  Timer.h
src/map_generation/: Generator.cpp  Generator.h  Interface.cpp  Interface.h  Path.cpp  Path.h
src/model/: AStar.cpp  AStar.h  AttackEvent.h  Attackable.cpp  Attackable.h  Build.cpp  Build.h  BuildAttackEvent.cpp  BuildAttackEvent.h  BuildData.h  BuildID.cpp  BuildID.h  BuildState.h  BuildType.h  Bullet.cpp  Bullet.h  BulletHitEvent.cpp  BulletID.cpp  BulletID.h  BulletState.cpp  Capturable.h  CapturableID.cpp  CapturableID.h  CapturableState.h  CapturableVehicle.cpp  CapturableVehicle.h  Data.cpp  Data.h  Event.h  GaiaPlayer.cpp  GaiaPlayer.h  GameController.cpp  GameController.h  GameCotroller.cpp  GameCotroller.h  Grunt.cpp  Grunt.h  IdUnit.cpp  IdUnit.h  Land.cpp  (+70 more)
src/server/: CommandReceiver.cpp  CommandReceiver.h  EventSender.cpp  GameController.h  PlayersManager.cpp  PlayersManager.h  ProtectedGameController.h  Server.cpp  Server.h  ServerMain.cpp  serverCommandReceiver.cpp  serverCommandReceiver.h  serverEventSender.cpp  serverEventSender.h  serverGameController.cpp  serverGameController.h  serverGameRunner.cpp  serverGameRunner.h  serverMain.cpp  serverPlayersManager.cpp  serverPlayersManager.h
src/storage/: Game_Loader.cpp  Game_Loader.h  Map_Loader.cpp  Map_Loader.h  Store_map.cpp  Store_map.h  Store_settings.cpp  Store_settings.h
src/tests/: Data_to_json.cpp  Data_to_json.h  Json_to_Data.cpp  Json_to_Data.h  data_to_json_tests.cpp
src/view/: Camera.cpp  Camera.h  EffectType.h  ExplosionVista.cpp  ExplosionVista.h  Image.cpp  Image.h  ObjectMapaVista.cpp  ObjectMapaVista.h  Panel.cpp  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  UnitAttackVista.cpp  UnitAttackVista.h  UnitCreateVista.cpp  UnitCreateVista.h  View.cpp  View.h  Vista.cpp  Vista.h  VistasFactory.cpp  VistasFactory.h  Window.cpp  Window.h
src/vista/: Image.cpp  Image.h  ObjectMapaVista.cpp  ObjectMapaVista.h  Panel.cpp  Panel.h  SDL install  Sprite.cpp  Sprite.h  Vista.cpp  Vista.h  Window.cpp  Window.h  main.cpp  tp
z_sounds/: Sound_event.cpp  Sound_event.h
z_tests/: Test_Ejemplo.h  runner  runner.cpp
z_tests/test_server/: serialize_Events_test.cpp
z_tests/tests_front_end/: FEnd_test.cpp
z_tests/tests_generator/: Generator_test.cpp
z_tests/tests_model/: AStar_test.cpp  GameControllerCapturables_test.cpp  GameController_build_test.cpp  GameController_objects_test.cpp  GameController_test.cpp  GameController_win_test.cpp  Map_test.cpp  Robot_test.cpp  Tile_test.cpp  Vista_test.cpp
z_tests/tests_sounds/: basic_test.cpp
z_tests/tests_storage/: load_map_tests.cpp  store_map_tests.cpp
z_tests/tests_view/: Vista_test.cpp  Window_test.cpp
(+641 files in other folders)
